--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html>
     <head>
         <title>ZAM | Z-Volta Asset Manager</title>
+
         <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="stylesheet" href="css/main.css">
+        <script type="text/javascript" src="js/Icons.js"></script>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
-        <h1>ZAM</h1>
-        <p>Z-Volta Asset Manager</p>
-        <br>gambino
-        <br>che schifo
-        <button><a href="login.html">Accedi</a></button>
+    <body style="overflow-x: hidden;" onload="IconLoader()">
+        <div id="Sidebar">
+            <img src="svg/Z.svg">
+            <div id="ContenitoreIcone">
+                <button id="PulsanteIcona">
+                    <icon id="Icona">Confirmation_Number</icon>
+                </button>
+                <button id="PulsanteIcona">
+                    <icon id="Icona">Groups</icon>
+                </button>
+                <button id="PulsanteIcona">
+                    <icon id="Icona">Accessibility_New</icon>
+                </button>
+                <button id="PulsanteIcona">
+                    <icon id="Icona">Settings</icon>
+                </button>
+            </div>
+        </div>
     </body>
 </html>
