--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body style="overflow-x: hidden;" onload="IconLoader()">
         <div id="Sidebar">
-            <img src="svg/Z.svg">
+            <img src="svg/Z.svg" id="Z">
             <div id="ContenitoreIcone">
                 <button id="PulsanteIcona">
                     <icon id="Icona">Confirmation_Number</icon>
@@ -26,6 +26,9 @@
                     <icon id="Icona">Settings</icon>
                 </button>
             </div>
+            <button id="PulsanteAccount">
+                <icon id="Icona">Account_Circle</icon>
+            </button>
         </div>
     </body>
 </html>
