aggiunta roba alla sidebar

--- a/index.html
+++ b/index.html
@@ -6,29 +6,36 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="css/main.css">
         <script type="text/javascript" src="js/Icons.js"></script>
+        <script type="text/javascript" src="js/Sidebar.js"></script>
+        <script type="text/javascript" src="js/ZamIcon.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body style="overflow-x: hidden;" onload="IconLoader()">
-        <div id="Sidebar">
-            <img src="svg/Z.svg" id="Z">
-            <div id="ContenitoreIcone">
-                <button id="PulsanteIcona">
-                    <icon id="Icona">Confirmation_Number</icon>
-                </button>
-                <button id="PulsanteIcona">
-                    <icon id="Icona">Groups</icon>
-                </button>
-                <button id="PulsanteIcona">
-                    <icon id="Icona">Accessibility_New</icon>
-                </button>
-                <button id="PulsanteIcona">
-                    <icon id="Icona">Settings</icon>
-                </button>
-            </div>
-            <button id="PulsanteAccount">
+        <zam-sidebar>
+            <zam-icon></zam-icon>
+
+            <zam-spacer></zam-spacer>
+ 
+            <button id="PulsanteIcona">
+                <icon id="Icona">Confirmation_Number</icon>
+            </button>
+            <button id="PulsanteIcona">
+                <icon id="Icona">Groups</icon>
+            </button>
+            <button id="PulsanteIcona">
+                <icon id="Icona">Accessibility_New</icon>
+            </button>
+            <button id="PulsanteIcona">
+                <icon id="Icona">Settings</icon>
+            </button>
+
+            <zam-spacer></zam-spacer>
+
+            <button id="PulsanteIcona">
                 <icon id="Icona">Account_Circle</icon>
             </button>
-        </div>
+        </zam-sidebar>
+        
     </body>
 </html>
