ho sistemato un pò qua e là

--- a/pagine/coordinatore.html
+++ b/pagine/coordinatore.html
@@ -20,6 +20,9 @@
                 <img src = "svg/Confirmation_number.svg" style="width:29px;height:auto;"/>
             </button>
             <button id="PulsanteIcona">
+                <img src = "svg/Groups.svg" style="width:29px;height:auto;"/>
+            </button>
+            <button id="PulsanteIcona">
                 <img src = "svg/Settings.svg" style="width:29px;height:auto;"/>
             </button>
 
