--- a/pagine/gestore.html
+++ b/pagine/gestore.html
@@ -17,7 +17,13 @@
             <zam-spacer></zam-spacer>
  
             <button id="PulsanteIcona">
-                <img src = "svg/Confirmation_number.svg" style="width:29px;height:auto;"/>
+                <img src = "svg/Manage_Accounts.svg" style="width:29px;height:auto;"/>
+            </button>
+            <button id="PulsanteIcona">
+                <img src = "svg/Groups.svg" style="width:29px;height:auto;"/>
+            </button>
+            <button id="PulsanteIcona">
+                <img src = "svg/Edit.svg" style="width:29px;height:auto;"/>
             </button>
             <button id="PulsanteIcona">
                 <img src = "svg/Settings.svg" style="width:29px;height:auto;"/>
