--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
         <title>ZAM | Z-Volta Asset Manager</title>
 
         <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+        <!-- Css -->
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="lib/zam-map/zam-map.css">
 
+        <!-- Leaflet's-->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
         crossorigin=""/>
@@ -15,6 +18,7 @@
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin=""></script>
 
+        <!-- Javascripts -->
         <script type="text/javascript" src="js/Sidebar.js"></script>
         <script type="text/javascript" src="js/ZamIcon.js"></script>
         <script type="text/javascript" src="lib/zam-map/zam-map.js"></script>
@@ -25,20 +29,31 @@
     <body style="overflow-x: hidden;">
         <zam-sidebar id="zam-sidebar">
             <zam-icon id="sidebar-icon"></zam-icon>
+            <img id="sidebar-iconBig" src = "svg/ZAM.svg">
 
             <zam-spacer></zam-spacer>
  
             <button id="PulsanteIcona">
                 <img src = "svg/Confirmation_number.svg" style="width:29px;height:auto;"/>
+                <h1 id="SidebarText">Prenotazioni</h1>
             </button>
             <button id="PulsanteIcona">
                 <img src = "svg/Settings.svg" style="width:29px;height:auto;"/>
+                <h1 id="SidebarText">Impostazioni</h1>
             </button>
 
             <zam-spacer></zam-spacer>
 
-            <button id="PulsanteIcona">
-                <img src = "svg/Account.svg" style="width:29px;height:auto;"/>
+            <button id="PulsanteIcona" style="height: 70px; align-items: end;">
+                <img id="SidebarAccIcon" src = "svg/Account.svg" style="width:auto;height:29px;"/>
+                <div id="Sidebar-Account">
+                    <h1 id="SidebarAccTitle">Minna Abdelkhalek</h1>
+                    <h1 id="SidebarAccDesc">Gestione Account</h1>
+                </div>
+            </button>
+
+            <button id="EsciAccount">
+                <h1>Esci</h1>
             </button>
         </zam-sidebar>
     </body>
