--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@
 
             <zam-spacer></zam-spacer>
  
-            <button id="PulsanteIcona">
+            <button id="PulsanteIcona" style="position: absolute; margin-bottom: 60px;">
                 <img src = "svg/Confirmation_number.svg" style="width:29px;height:auto;"/>
                 <h1 id="SidebarText">Prenotazioni</h1>
             </button>
-            <button id="PulsanteIcona">
+            <button id="PulsanteIcona" style="position: absolute; margin-top: 60px;">
                 <img src = "svg/Settings.svg" style="width:29px;height:auto;"/>
                 <h1 id="SidebarText">Impostazioni</h1>
             </button>
-
-            <zam-spacer></zam-spacer>
 
             <button id="PulsanteIcona" style="height: 70px; align-items: end;">
                 <img id="SidebarAccIcon" src = "svg/Account.svg" style="width:auto;height:29px;"/>
@@ -50,10 +48,9 @@
                     <h1 id="SidebarAccTitle">Minna Abdelkhalek</h1>
                     <h1 id="SidebarAccDesc">Gestione Account</h1>
                 </div>
-            </button>
-
-            <button id="EsciAccount">
-                <h1>Esci</h1>
+                <button id="EsciAccount">
+                    <h1>Esci</h1>
+                </button>
             </button>
         </zam-sidebar>
     </body>
