--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <script type="text/javascript" src="js/Sidebar.js"></script>
         <script type="text/javascript" src="js/ZamIcon.js"></script>
         <script type="text/javascript" src="lib/zam-map/zam-map.js"></script>
+        <script type="text/javascript" src="js/ZAMConditional.js"></script>
         <script type="text/javascript" src="js/HomePage.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,6 +38,10 @@
             <button id="PulsanteIcona">
                 <img src = "svg/Confirmation_number.svg" style="width:29px;height:auto;"/>
                 <h1 id="SidebarText">Prenotazioni</h1>
+            </button>
+            <button zam-conditional="coord" id="PulsanteIcona">
+                <img src = "svg/Settings.svg" style="width:29px;height:auto;"/>
+                <h1 id="SidebarText">Super segreto</h1>
             </button>
             <button id="PulsanteIcona">
                 <img src = "svg/Settings.svg" style="width:29px;height:auto;"/>
