Modifiche in corso, continuerò un giorno

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <div class="Accedi">
             <div class="AccediContainer">
                 <img class="ZAMLogo" src = "svg/ZAM.svg">
-                <h1>Accedi</h1>
+                <h1 style="font-size: 33px;font-weight: 100;">Accedi</h1>
                 <p class="AccediText">Usa il tuo account Dipendente, Coordinatore o Gestore per accedere</p>
             </div>
             <form onsubmit="SendLogin(event)" class="AccediContainer AccediTop">
