revert modifiche login, inizio lavoro a light mode (ew)

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
             <zam-spacer></zam-spacer>
  
+            <!--TODO (per erica?): usare un bottone con onclick così è bad practice in HTML!-->
+            <!--sostituisci i button con un link e usa href invece di chiamare delle funzioni JS per niente :P-->
             <button onclick="Helpers.redir('./prenotazioni.html')" zam-conditional="!gest" id="PulsanteIcona">
                 <img src="svg/Confirmation_number.svg" style="width:29px;height:auto;"/>
                 <h1 id="SidebarText">Prenotazioni</h1>
