aggiunta modifica prenotazioni e altro

--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="lib/zamcaptcha-js/css/zamcaptcha.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <script type="text/javascript" src="js/Helpers.js"></script>
         <script type="text/javascript" src="lib/zam-auth/zam-auth.js"></script>
         <script type="text/javascript" src="js/Login.js"></script>
         <script type="text/javascript" src="lib/zamcaptcha-js/js/zamcaptcha.js"></script>
