--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <div class="Accedi">
             <div class="AccediContainer">
                 <img class="ZAMLogo" src = "svg/ZAM.svg">
-                <h1 style="font-size: 33px;font-weight: 100;font-family: SF_Pro_Display_Regular;">Accedi</h1>
+                <h1 class="AccediTextTitolo" style="font-size: 33px;font-weight: 100;font-family: SF_Pro_Display_Regular;">Accedi</h1>
                 <p class="AccediText">Usa il tuo account <b>Dipendente</b>, <b>Coordinatore</b> o <b>Gestore per accedere</b></p>
             </div>
             <form onsubmit="SendLogin(event)" class="AccediContainer">
