--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h1 id="SidebarText">Prenotazioni</h1>
             </button>
             <!--<Coordinatori>-->
-            <button onclick="Helpers.redir('./wip.html')" zam-conditional="gest" id="PulsanteIcona">
+            <button onclick="Helpers.redir('./gestore.html')" zam-conditional="gest" id="PulsanteIcona">
                 <img src="svg/Manage_Accounts.svg" style="width:29px;height:auto;"/>
                 <h1 id="SidebarText">Gestione Utenti</h1>
             </button>
