fix layout login

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                     </div>
                     -->
                     <zam-spacer></zam-spacer>
-                    <div class="ButtonSpacer" row>
+                    <div row>
                         <zam-spacer></zam-spacer>
                         <button disabled type="button" class="LoginButton" id="zam-continue" onclick="ContinueAccedi()">Accedi</button>  
                     </div>
@@ -38,7 +38,7 @@
                 <div id="ContinuaCaptcha" style="display:none">
                     <div id="zamcaptcha"></div>
                     <zam-spacer></zam-spacer>
-                    <div class="ButtonSpacer" row>
+                    <div row>
                         <zam-spacer></zam-spacer>
                         <input disabled class="LoginButton" id="zam-submit" type="submit" value="Accedi">    
                     </div>    
