miglioramenti a creazione utente

--- a/gestore.html
+++ b/gestore.html
@@ -87,9 +87,14 @@
             </zam-row>
             <zam-row>
                 <h1>Dipendenti</h1>
-                <a class="add-button" href="./newuser.html"></a>
+                <a class="add-button" href="./newuser.html?type=0"></a>
             </zam-row>
-            <zam-row cards id="prenotazioni"></zam-row>
+            <zam-row cards id="dipendenti"></zam-row>
+            <zam-row>
+                <h1>Coordinatori</h1>
+                <a class="add-button" href="./newuser.html?type=1"></a>
+            </zam-row>
+            <zam-row cards id="coordinatori"></zam-row>
         </zam-body>
     </body>
 </html>
